--- a/example.html
+++ b/example.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Casibase Chat Widget Test</title>
-    <script src="../tracking-code/tracking-code.js"></script>
+    <script src="tracking-code/tracking-code.js"></script>
   </head>
   <body>
     <h1>Casibase Chat Widget Test Page</h1>
