feat: add color parsing and darkening functions in casibase.js- Introduced `parseColor`, `hexToRgb`, and `darkenColor` functions to handle color transformations.

--- a/example.html
+++ b/example.html
@@ -8,10 +8,9 @@
     <script>
       document.addEventListener("DOMContentLoaded", function () {
         initCasibaseChat({
-          themeColor: "#ff5733",
-          hoverColor: "#ff3e3e",
-          aiUrl: "https://ai.casbin.com/?isRaw=1",
-          enableAnimations: true,
+          themeColor: "#ff5733", // or "rgb(255, 87, 51)"
+          endpoint: "https://ai.casbin.com/?isRaw=1",
+          enableAnimations: false,
         });
       });
     </script>
