refactor: rename aiUrl to endpoint and update documentation

--- a/example.html
+++ b/example.html
@@ -10,7 +10,7 @@
         initCasibaseChat({
           themeColor: "#ff5733", // or "rgb(255, 87, 51)"
           endpoint: "https://ai.casbin.com/?isRaw=1",
-          enableAnimations: false,
+          enableAnimations: true,
         });
       });
     </script>
