--- a/example.html
+++ b/example.html
@@ -4,13 +4,19 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Casibase Chat Widget Test</title>
-    <script src="tracking-code/tracking-code.js"></script>
+    <script src="https://tcdn.casibase.org/casibase.js"></script>
+    <script>
+      document.addEventListener("DOMContentLoaded", function () {
+        initCasibaseChat({
+          themeColor: "#ff5733", // or "rgb(255, 87, 51)"
+          endpoint: "https://ai.casbin.com/?isRaw=1",
+          enableAnimations: true,
+        });
+      });
+    </script>
   </head>
   <body>
     <h1>Casibase Chat Widget Test Page</h1>
     <p>You should see a chat button in the bottom right corner of this page.</p>
-    <!-- <div style="padding: 20px; border: 1px solid #000;">
-      <iframe src="https://ai.casbin.com/?isRaw=1" frameborder="0" width="550" height="600"></iframe>
-    </div> -->
   </body>
 </html>
