--- a/example.html
+++ b/example.html
@@ -8,9 +8,7 @@
     <script>
       document.addEventListener("DOMContentLoaded", function () {
         initCasibaseChat({
-          themeColor: "#ff5733", // or "rgb(255, 87, 51)"
-          endpoint: "https://ai.casbin.com/?isRaw=1",
-          enableAnimations: true,
+          endpoint: "https://ai.casbin.com",
         });
       });
     </script>
